Fix broken mobile view due to flex gap in CSS

--- a/styles.css
+++ b/styles.css
@@ -112,7 +112,6 @@ img {
 #infoBoxContainer {
     display: flex;
     justify-content: space-between;
-    gap: 64px;
     color: #909090;
     margin-top: 32px;
 }
